# KicadParser

./: .gitignore  CMakeLists.txt  Makefile.bk  README.md  bm1_unrouted.kicad_pcb  kicadPcbDataBase.cpp  kicadPcbDataBase.h  main.cpp  mirror_and_rotate.kicad_pcb  parser  router.h
cases/bm1/: bm1.routed.kicad_pcb  bm1.unrouted.kicad_pcb
cases/bm2/: _autosave-bm2.routed.drc.kicad_pcb  bm2.routed.drc.mark.kicad_pcb  bm2.routed.kicad_pcb  bm2.routed.ours.kicad_pcb  bm2.unrouted.kicad_pcb  bm2.unrouted.routed.ours.bestSolutionWithMerging.kicad_pcb
cases/bm2.artificial/: bm2.artificial.kicad_pcb
cases/bm3/: bm3.routed.kicad_pcb  bm3.sabased.unrouted.kicad_pcb  bm3.unrouted.kicad_pcb
cases/bm4/: bm4.routed.kicad_pcb  bm4.unrouted.kicad_pcb
cases/ddr3/: ddr3l-dummy-testcase-12layers.kicad_pcb  ddr3l-dummy-testcase-6layers.kicad_pcb
cases/parallella/: _autosave-meta_breakout.kicad_pcb
cases/parallella/meta_breakout/: meta_breakout.kicad_pcb  meta_breakout_5.1.2.routed.kicad_pcb  meta_breakout_5.1.2.unrouted.kicad_pcb
cases/parallella/paralime/: MYRIAD_RD_5.1.2.routed.kicad_pcb  MYRIAD_RD_5.1.2.unrouted.kicad_pcb  bm14.routed.kicad_pcb
cases/parallella/paratile/: para.kicad_pcb  para_5.1.2.routed.kicad_pcb  para_5.1.2.unrouted.kicad_pcb
cases/parallella/porcupine/: porcupine_5.1.2.routed.kicad_pcb  porcupine_5.1.2.unrouted.kicad_pcb
src/: PcbDB.i  kicadParser.cpp  kicadParser.h  kicadPcbDataBase.cpp  kicadPcbDataBase.h  layer.h  main.cpp  module.h  mymath.h  net.h  object.h  pcbBoost.h  pin.h  point.h  router.h  rule.h  segment.h  shape.cpp  shape.h  tree.h  util.cpp  util.h  via.h
tmp/: kicadparser-cfgcmd.txt
